basic 3 department link working,pdf issue,course nme repeat issue

--- a/src/AdminLogin.html
+++ b/src/AdminLogin.html
@@ -80,6 +80,15 @@
                 </label>
             </div>
             
+            <div class="form-group">
+                <label for="department" style="font-weight: bold;">Department:</label>
+                <select id="department" required>
+                    <option value="cs">Computer Science & IT</option>
+                    <option value="eng">Engineering</option>
+                    <option value="pharm">Pharmacy & HND</option>
+                </select>
+            </div>
+            
             <button type="submit" class="auth-btn">LOGIN</button>
             <div id="debug-info"></div>
         </form>
